--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,5 @@ Thumbs.db
 # ------------------------
 M01_Basic_Python/07_modules_packages/step07_json_pickle/data/*.json
 M01_Basic_Python/07_modules_packages/step07_json_pickle/data/*.pkl
+M01_Basic_Python/07_modules_packages/step08_datetime/data/*.json
+M01_Basic_Python/07_modules_packages/step08_datetime/data/*.pkl
