--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,3 +8,23 @@ target-version = "py313"
 
 [tool.ruff.lint]
 select = ["E", "F", "I", "B"]
+
+[tool.mypy]
+python_version = "3.11"
+strict = true
+no_implicit_optional = true
+warn_unused_ignores = true
+warn_redundant_casts = true
+disallow_untyped_defs = true
+check_untyped_defs = true
+warn_unreachable = true
+
+[tool.pytest.ini_options]
+addopts = "-q"
+testpaths = ["M01_Basic_Python/09_typing_pytest/tests"]
+
+# Ослабляем требования ТОЛЬКО для тестов
+[[tool.mypy.overrides]]
+files = ["M01_Basic_Python/09_typing_pytest/tests/**/*.py"]
+disallow_untyped_defs = false
+check_untyped_defs = false
